zag-poc/tests/diag/e0002_pure_alloc.expected
error[E0002]: capability violation — `@pure` constraint broken in function `compute`
  --> tests/diag/e0002_pure_alloc.zag:2:1
   |
2 | fn compute(n: i32) i32 @pure {
   | ^^^^^^^ effect occurs here
   = note: @pure functions must not perform heap allocation, IO, or lock acquisition
   = hint: remove the allocation/IO/lock, or remove the @pure annotation
