zag-poc/tests/diag/e0002_pure_alloc.zag
// E0002: @pure function must not allocate
fn compute(n: i32) i32 @pure {
    let buf: []i32 = zalloc(n);
    zfree(buf);
    return 42;
}

fn main() i32 {
    return 0;
}
